--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -63,6 +63,17 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>ShopBOServiceServlet</servlet-name>
 		<url-pattern>/thrift/ShopBOService</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>GetImagesList</servlet-name>
+		<servlet-class>com.vmesteonline.be.utils.GetImagesList</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetImagesList</servlet-name>
+		<url-pattern>/utils/gil</url-pattern>
+	</servlet-mapping>
+	
+	
 	<servlet>
 		<servlet-name>FileAccess</servlet-name>
 		<servlet-class>com.vmesteonline.be.VoFileAccess</servlet-class>
@@ -121,6 +132,8 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/backoffice</url-pattern>
 	</servlet-mapping>
 
+	
+	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
