--- a/vonline_be/package.json
+++ b/vonline_be/package.json
@@ -6,26 +6,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.3.1",
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",	
-    "karma": "~0.10",
-    "protractor": "~0.20.1",
+    "grunt-contrib-watch": "^0.6.1",
     "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "karma": "~0.10",
+    "karma-junit-reporter": "^0.2.2",
+    "protractor": "~0.20.1",
+    "shelljs": "^0.2.6"
   },
-  "scripts":{
-      "start": "http-server -a localhost -p 8000",
-
-      "test": "karma start war/js/forum/tests/karma.conf.js",
-      "test-single-run": "karma start war/js/forum/tests/karma.conf.js  --single-run",
-
-      "preprotractor": "npm run update-webdriver",
-      "protractor": "protractor war/js/forum/tests/protractor-conf.js"
+  "scripts": {
+    "start": "http-server -a localhost -p 8000",
+    "test": "karma start war/js/forum/tests/karma.conf.js",
+    "test-single-run": "karma start war/js/forum/tests/karma.conf.js  --single-run",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor war/js/forum/tests/protractor-conf.js"
   }
 }
